k8s-minikube/reduce-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: myrc
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: myrc
spec:
  replicas: 1
